# viral-marketing-reporter-v2

./: .gitignore  ARCHITECTURE.md  LOGGING.md  ViralMarketingReporter.spec  main.spec  pyproject.toml  pyrightconfig.json  test_instagram_manual.py
.github/workflows/: release.yml
src/viral_marketing_reporter/: bootstrap.py  main.py
src/viral_marketing_reporter/application/: commands.py  handlers.py  queries.py
src/viral_marketing_reporter/domain/: events.py  message_bus.py  model.py  repositories.py  uow.py
src/viral_marketing_reporter/infrastructure/: context.py  environment.py  exceptions.py  logging_utils.py  message_bus.py  repositories.py  uow.py
src/viral_marketing_reporter/infrastructure/persistence/: database.py  orm.py  repositories.py
src/viral_marketing_reporter/presentation/: main_window.py  results_dialog.py  widgets.py
src/viral_marketing_reporter/tests/unit/application/: test_handlers.py
src/viral_marketing_reporter_py/domain/: model.py
tests/e2e/: test_full_search_process.py
tests/fixtures/: naver_blog_search_less_than_10.html  naver_blog_search_no_result.html  naver_blog_search_result.html
tests/integration/: conftest.py  test_naver_blog_service.py
tests/integration/persistence/: test_repositories.py
tests/scripts/: save_fixture.py
tests/unit/application/: test_entire_message_process.py  test_handlers.py
