[project]
name = "viral-marketing-reporter"
version = "1.0.2"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Yeonuk Hwang", email = "charlie.hwang131@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
  "httpx>=0.28.1",
  "loguru>=0.7.3",
  "playwright>=1.55.0",
  "pyinstaller>=6.16.0",
  "pyside6>=6.9.2",
  "qasync>=0.28.0",
  "sqlalchemy>=2.0.43",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "pytest>=8.4.2",
  "pytest-mock>=3.15.1",
  "pytest-asyncio>=1.2.0",
  "pytest-playwright-asyncio>=0.7.1",
  "pyinstaller>=6.16.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
